<resources>
    <string name="app_name">ClipBox</string>

    <string name="alert_copy_clip">Want to copy to clipBox?</string>
    <string name="alert_delete_clip">Want to delete?</string>

    <string name="button_cancel_uppercase">CANCEL</string>
    <string name="button_close_uppercase">CLOSE</string>
    <string name="button_copy_uppercase">COPY</string>
    <string name="button_delete_uppercase">DELETE</string>

    <string name="email_choose_app_title">Send email via…</string>
    <string name="email_subject_bug_report" formatted="false">%s (version %s)</string>

    <string name="label_about">About</string>
    <string name="label_about_dialog_content_general">An enhanced clipboard manager to save, edit and share your favorite text.\n\nCopyright © 2015 Volcano.</string>
    <string name="label_clip_edited">Text Edited</string>
    <string name="label_clip_selected">%d selected</string>
    <string name="label_delete">Delete</string>
    <string name="label_dialog_edit_clip">Edit text</string>
    <string name="label_enter_word">Enter word…</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_no_category">No Category</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_search">Search</string>
    <string name="label_settings">Settings</string>
    <string name="label_share">Share</string>
    <string name="label_share_choose_app">Share via…</string>

    <string name="label_intro_1">Welcome to ClipBox. :)</string>
    <string name="label_intro_2">Copy your text anywhere you want and see them here.</string>
    <string name="label_intro_3">Edit and share your favorite texts with your friends.</string>
    <string name="label_intro_version_2">New Features in ClipBox Version 1.1.0:\n
        &#160;&#160;&#8226;&#160;&#160;Performance Improvement\n
        &#160;&#160;&#8226;&#160;&#160;New User Interface (UI)\n
        &#160;&#160;&#8226;&#160;&#160;Add Search functionality\n
        &#160;&#160;&#8226;&#160;&#160;Mark your clip texts as favorite\n
        &#160;&#160;&#8226;&#160;&#160;See favorite clips via Favorite icon in action bar\n
        &#160;&#160;&#8226;&#160;&#160;Use LongClick on clips to Delete\n
    </string>
    <string name="label_intro_version_1_2_0">New Features in ClipBox Version 1.2.0:\n
        &#160;&#160;&#8226;&#160;&#160;Confirm copy texts to ClipBox\n
        &#160;&#160;&#8226;&#160;&#160;Added setting screen\n
        &#160;&#160;&#8226;&#160;&#160;Multiple delete clips capability (Long click)\n
        &#160;&#160;&#8226;&#160;&#160;Support right to left languages
    </string>

    <string name="preference_app_setting_category_title">CLIP</string>
    <string name="preference_app_setting_confirm_copy_title">Copy Confirm</string>
    <string name="preference_app_setting_confirm_copy_summery">Confirm Copy to ClipBox?</string>

    <string name="preference_other_about_title">About</string>
    <string name="preference_other_category_title">OTHER</string>
    <string name="preference_other_feedback_title">Feedback</string>
    <string name="preference_other_rate_title">Rate</string>
    <string name="preference_other_share_title">Share</string>

    <string name="share_subject">ClipBox App</string>
    <string name="share_body" formatted="false">\nClipBox is an enhanced clipboard manager to save, edit, and share your favorite texts with your friends.\n\n %s \n\n %s</string>

    <string name="toast_load_email_client_failed">Not found any email app on your device</string>
    <string name="toast_load_share_client_failed">Unable to load share client</string>
    <string name="toast_copied_clipbox">Copied to ClipBox.</string>

</resources>
