<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_about"
        android:title="@string/label_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share"
        android:title="@string/label_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/label_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="com.volcano.clipbox.view.VlSearchView"/>

    <item
        android:id="@+id/menu_favorite"
        android:title="@string/label_favorite"
        android:icon="@drawable/ic_action_star_empty"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/label_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="ifRoom" />

</menu>
